# ic_vault

./: .gitignore  Cargo.toml  README.md  build.sh  dfx.json  local_deploy.sh  local_upgrade.sh  network_deploy.sh  network_ic_vault_reinstall.sh  network_signature_vault_reinstall.sh  network_upgrade.sh  package-lock.json  package.json  webpack.config.js
src/declarations/ic_vault/: ic_vault.did  ic_vault.did.d.ts  ic_vault.did.js  index.js
src/declarations/ic_vault_assets/: index.js
src/declarations/nft_storage/: index.js  nft_storage.did  nft_storage.did.d.ts  nft_storage.did.js
src/declarations/nft_token/: index.js  nft_token.did  nft_token.did.d.ts  nft_token.did.js
src/ic_vault/: Cargo.toml  ic_vault.did  lib.rs  signature_vault.mo  storage.rs
src/ic_vault_assets/src/: index.html  index.js
src/nft_token/: nft_token.mo  types.mo
src/signature_vault/: signature_vault.mo
tests/: config.js  flies_config.js  frogs_config.js  ic_nft_config.js  key.json  package.json  signature_rust.js  test_mint.js  verification.js
